--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,4 +1,4 @@
-.hero-section {
+.hero {
     padding-top: 200px;
     padding-bottom: 210px;
     letter-spacing: 0.06em;
@@ -13,7 +13,7 @@
     background-repeat: no-repeat;
 }
 
-.hero-section__title {
+.hero__title {
     margin-bottom: 30px;
 
     color: var(--white-color);
@@ -27,7 +27,7 @@
 
 /* Button */
 
-.hero-section__button {
+.hero__button {
     display: inline-block;
     min-width: 216px;
     border-radius: 4px;
