--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import '../sass/base/common';
 @import '../sass/components/container';
 @import '../sass/layouts/header';
+@import '../sass/shared/_logo';
 @import '../sass/utils/hidden';
 @import '../sass/layouts/hero';
 @import '../sass/layouts/features';
