--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -10,6 +10,9 @@
 
 .site-nav__logo {
     margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+    color: var(--black-color);
     transition: color var(--transition);
     &:hover,
     &:focus {
