--- a/sass/layouts/_page-footer.scss
+++ b/sass/layouts/_page-footer.scss
@@ -36,6 +36,11 @@
     text-decoration: none;
 }
 
+.page-footer__link:hover,
+.page-footer__link:focus {
+    color: var(--accent-color);
+}
+
 .page-footer__link--location {
     color: var(--white-color);
 }
